# westac_parlaclarin_pipeline

./: .env  .gitignore  .pylintrc  Dockerfile  Makefile  Makefile.dev  README.md  doit.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  tag-it.sh  tag.sh  tag_test_data.sh
configs/: default.yml  v0.6.0.yml  v1.1.0.yml
example_corpora/freeling-fra-txt/source/: wikipedia.txt
example_corpora/mini-swe/source/: dokument1.xml
example_corpora/standard-swe/source/: rävar.xml
lab/sparv4/: config-template.yaml
lab/sparv_csv/: config.yaml
lab/sparv_csv/source/: prot-1975--63.txt  prot-1975--63.xml
lab/test-parla-clarin/: config.yaml
lab/test-speeches-xml/: config.yaml
makeline/: parlaclarin_xml_to_text.py
pipelines/: convert.py
pipelines/makeline/: Makefile  parlaclarin_test.py
pipelines/snakeline/: Makefile  Snakefile  config.yaml  utility.py
pipelines/snakeline/rules/: convert.py  help.snk  setup.snk  to_txt.snk  utility.py
purgatory/config/: __init__.py  config_test.py  test_config2.yml  typed_config.py  utility.py
purgatory/makeline/: Makefile  parlaclarin_xml_to_csv.xslt
purgatory/sandbox/test-parla-clarin/: source
purgatory/sandbox/test-parla-clarin2/: config.yaml
purgatory/sandbox/test-speeches-xml/: Makefile
purgatory/sandbox/test-speeches-xml/source/: prot-1922--fk--26.xml  prot-1939-urtima-ak--18.xml  prot-199192--90.xml  prot-199394--78.xml
purgatory/sandbox/xmlns-bugg/: config.yaml
purgatory/templates/: __init__.py
purgatory/wip/: Makefile  config_value.py  prepare_sparv.sh  setup.sh
pyriksprot_tagger/: __init__.py  config.py  cwb.py  utility.py
pyriksprot_tagger/scripts/: move_empty_files.sh  stanza-models.sh  tag-it.sh  tag-test-data.sh  tag.py  tag.sh  tag_info.py  update-timestamps
pyriksprot_tagger/scripts/other/: fix-duplicate-subfolders.sh  git-timesync  snake-it.sh
pyriksprot_tagger/taggers/: __init__.py  spacy2.py  stanza_tagger.py
pyriksprot_tagger/workflow/: Makefile  Snakefile
pyriksprot_tagger/workflow/rules/: compute_frequency.smk  extract_speeches.smk  help.smk  tag_protocols.smk  update_repository.smk
resources/snakemake/: config.yaml
resources/sparv/: __init__.py
resources/templates/: paragraphs.txt.jinja  paragraphs.xml.jinja  speeches.cdata.xml.jinja  speeches.txt.jinja  speeches.xml.jinja  to_xml_paragraphs.jinja  to_xml_speeches.jinja
sandbox/example_corpora/freeling-eng-slevel/source/: document1.xml
sandbox/example_corpora/mini-swe/source/: dokument2.xml
sandbox/example_corpora/special-swe/source/: dokument.xml
sandbox/example_corpora/standard-swe/: convert.py
sandbox/example_corpora/stanford-eng/source/: wikipedia.xml
sandbox/example_corpora/treetagger-nld/source/: document1.xml
sandbox/example_corpora/txt-swe/source/: dokument.txt
sandbox/sparv4/: config.yaml  sparv-in-yearly-chunks.sh
sandbox/sparv_xml/source/: prot-1968--ak--20.xml
sandbox/test-parla-clarin2/: config copy.yaml
sandbox/test-parla-clarin2/source/: prot-1933--fk--5.xml
sandbox/test-speeches-xml/: config.yaml
sandbox/test-speeches-xml/source/: prot-1963--ak--23.xml  prot-199091--118.xml  prot-199293--72.xml  prot-9999--xx--99.xml
scripts/: Makefile  config_value.py  git_update_mtime.sh  parla_frequencies.py  parla_transform.py  prepare_sparv.sh  setup-pipeline  setup.sh  tag.py  tag_info.py
scripts/wip/: Makefile  prepare_sparv.sh  setup.sh
sparv_lab/sparv_xml/: config.yaml
test/test_data/source/v1.1.0/tagged_frames/: tag_config.yml
tests/: annotate_test.py  args_test.py  bugs_test.py  config.yml  config_test.py  conftest.py  convert_test.py  dehyphen_test.py  entities_test.py  frequency_test.py  model_test.py  parse_test.py  profile_tagging.py  snakemake_test.py  spacy_test.py  stanza_test.py  tagger_registry_test.py  test.env  utility.py  utility_test.py
tests/parla_clarin/: convert_test.py  parse_test.py
tests/parse/: parla_clarin_test.py
tests/test_data/: prot-1945--ak--32.xml  prot-1958-a-ak--17-01.xml  prot-1958-fake.xml  prot-199293--72.xml  prot-9999--xx--99.xml  riksdagen-corpus-term-frequencies.pkl  source  sparv_config.yml  tag_test_data.sh  test.xml  test_config.yml  test_config_output.yml  word-frequencies.pkl
tests/test_data/fake/: prot-1958-fake.xml  prot-1960-fake.xml
tests/test_data/fakes/: .env  Makefile  protocols.txt
tests/test_data/fakes/fakes/parlaclarin/metadata/: member_of_parliament.csv  name_location_specifier.csv  twitter.csv
tests/test_data/fakes/opts/: tagger-config.yml
tests/test_data/fakes/v0.6.0/: prot-1958-fake-utterances.csv  prot-1960-fake-utterances.csv  prot-1980-empty-utterances.csv
tests/test_data/fakes/v0.6.0/dehyphen_datadir/: word-frequencies.pkl
tests/test_data/fakes/v0.6.0/parlaclarin/metadata/: alias.csv  location_specifier.csv  minister.csv  (+3 more)
tests/test_data/fakes/v1.1.0/: config.yml
tests/test_data/work_folder/: riksdagen-corpus-term-frequencies.pkl  sparv
workflow/: Makefile  README.md  Snakefile  config.py  utility.py
workflow/annotate/: __init__.py  annotate.py  interface.py  pos_tag.py  spacy2.py  stanza.py  stanza_tagger.py
workflow/config/: __init__.py  config.yaml  config.yml  simple_config.py  simple_config.yml  test_config.yml  typed_config.py
workflow/model/: __init__.py  compute.py  convert.py  entities.py  model.py  parse.py  term_frequency.py  tokenize.py  utility.py
workflow/model/dehyphen/: __init__.py  flair_dehyphen.py  swe_dehyphen.py
workflow/model/dehyphenation/: swe_dehyphen.py
workflow/model/deprecated/: update_repository.py
workflow/model/utility/: __init__.py  persistent_dict.py  utils.py  yaml_loader.py
workflow/rules/: __paths__.py  annotate_speeches.smk  compute_frequency.smk  convert.py  extract_speeches.smk  frequency.smk  help.smk  repository.smk  setup.smk  speeches.smk  sync_files.smk  tag_protocols.smk  to_speech_xml.smk  to_speech_xml.snk  to_speeches.smk  to_txt.smk  update_repository.smk
workflow/rules/archive/: to_speeches.xml.smk
workflow/rules/xslt_rules/: to_speech_xml.smk  to_txt.smk
workflow/taggers/: __init__.py  registry.py  spacy2.py  stanza.py
(+3 files in other folders)
